small fixes (names, types, comments)

--- a/approx_conv.ipynb
+++ b/approx_conv.ipynb
@@ -143,7 +143,7 @@
     "        ]))\n",
     "\n",
     "        self.fc = nn.Sequential(OrderedDict([\n",
-    "            ('fc', nn.Linear(24*24,1)),\n",
+    "            ('fc', nn.Linear(24*24,1)), # Too large for compiling\n",
     "            ('afc', StepActivation()),\n",
     "        ]))\n",
     "\n",
@@ -224,95 +224,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10661, 28, 28])\n",
-      "tensor(1167) torch.Size([1185, 1])\n",
-      "tensor(5219) torch.Size([10661, 1])\n",
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.985    |    CentralNet     0.985    ||    Net            0.491    |    CentralNet     0.491\n",
+      "\tF1 score      Net            0.998    |    Big Network    0.998    ||    Net            0.507    |    Big Network    0.507\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.970    |    Net            1.000    ||    Net            0.488    |    Net            0.492\n",
-      "\t              CentralNet     0.970    |    CentralNet     1.000    ||    CentralNet     0.488    |    CentralNet     0.492\n",
+      "\tCoverage      Net            0.997    |    Net            1.000    ||    Net            0.507    |    Net            0.507\n",
+      "\t              Big Network    0.997    |    Big Network    1.000    ||    Big Network    0.507    |    Big Network    0.507\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10661, 28, 28])\n",
-      "tensor(1181) torch.Size([1185, 1])\n",
-      "tensor(5386) torch.Size([10661, 1])\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.997    |    CentralNet     0.997    ||    Net            0.505    |    CentralNet     0.505\n",
+      "\tF1 score      Net            0.998    |    Big Network    0.998    ||    Net            0.511    |    Big Network    0.511\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            0.997    ||    Net            0.505    |    Net            0.505\n",
-      "\t              CentralNet     0.997    |    CentralNet     0.997    ||    CentralNet     0.505    |    CentralNet     0.505\n",
+      "\tCoverage      Net            0.997    |    Net            1.000    ||    Net            0.511    |    Net            0.511\n",
+      "\t              Big Network    0.997    |    Big Network    1.000    ||    Big Network    0.511    |    Big Network    0.511\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10661, 28, 28])\n",
-      "tensor(1185) torch.Size([1185, 1])\n",
-      "tensor(5301) torch.Size([10661, 1])\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.497    |    CentralNet     0.497\n",
+      "\tF1 score      Net            0.994    |    Big Network    0.994    ||    Net            0.501    |    Big Network    0.501\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.497    |    Net            0.497\n",
-      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.497    |    CentralNet     0.497\n",
+      "\tCoverage      Net            1.000    |    Net            0.988    ||    Net            0.506    |    Net            0.499\n",
+      "\t              Big Network    1.000    |    Big Network    0.988    ||    Big Network    0.506    |    Big Network    0.499\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10661, 28, 28])\n",
-      "tensor(1184) torch.Size([1185, 1])\n",
-      "tensor(5379) torch.Size([10661, 1])\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.505    |    CentralNet     0.505\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.998    |    Net            1.000    ||    Net            0.505    |    Net            0.505\n",
-      "\t              CentralNet     0.998    |    CentralNet     1.000    ||    CentralNet     0.505    |    CentralNet     0.505\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10661, 28, 28])\n",
-      "tensor(1171) torch.Size([1185, 1])\n",
-      "tensor(5259) torch.Size([10661, 1])\n",
+      "\tF1 score      Net            0.816    |    Big Network    0.995    ||    Net            0.500    |    Big Network    0.500\n",
+      "\t              Approx 1       0.573    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.555    |    Net            0.997    ||    Net            0.504    |    Net            0.498\n",
+      "\t              Big Network    0.998    |    Big Network    0.992    ||    Big Network    0.504    |    Big Network    0.498\n",
+      "\t              Approx 1       0.555    |    Approx 1       0.581    ||    Approx 1       1.000    |    Approx 1       0.000\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.988    |    CentralNet     0.988    ||    Net            0.496    |    CentralNet     0.496\n",
+      "\tF1 score      Net            1.000    |    Big Network    1.000    ||    Net            0.504    |    Big Network    0.504\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.976    |    Net            1.000    ||    Net            0.488    |    Net            0.499\n",
-      "\t              CentralNet     0.976    |    CentralNet     1.000    ||    CentralNet     0.488    |    CentralNet     0.499\n",
+      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.504    |    Net            0.504\n",
+      "\t              Big Network    1.000    |    Big Network    1.000    ||    Big Network    0.504    |    Big Network    0.504\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10661, 28, 28])\n",
-      "tensor(1181) torch.Size([1185, 1])\n",
-      "tensor(5314) torch.Size([10661, 1])\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.997    |    CentralNet     0.000    ||    Net            0.499    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.997    |                            ||    Approx 1       0.499    |                        \n",
-      "\tCoverage      Net            0.998    |    Net            0.995    ||    Net            0.497    |    Net            0.500\n",
-      "\t              CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.998    |    Approx 1       0.995    ||    Approx 1       0.497    |    Approx 1       0.500\n",
-      "torch.Size([10662, 28, 28])\n",
-      "tensor(1179) torch.Size([1184, 1])\n",
-      "tensor(5319) torch.Size([10662, 1])\n",
+      "\tF1 score      Net            0.987    |    Big Network    0.987    ||    Net            0.497    |    Big Network    0.497\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.981    |    Net            0.993    ||    Net            0.489    |    Net            0.500\n",
+      "\t              Big Network    0.981    |    Big Network    0.993    ||    Big Network    0.489    |    Big Network    0.500\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.996    |    CentralNet     0.996    ||    Net            0.499    |    CentralNet     0.499\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            0.995    ||    Net            0.499    |    Net            0.499\n",
-      "\t              CentralNet     0.997    |    CentralNet     0.995    ||    CentralNet     0.499    |    CentralNet     0.499\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10662, 28, 28])\n",
-      "tensor(1184) torch.Size([1184, 1])\n",
-      "tensor(5341) torch.Size([10662, 1])\n",
+      "\tF1 score      Net            0.967    |    Big Network    0.998    ||    Net            0.499    |    Big Network    0.499\n",
+      "\t              Approx 1       0.034    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.934    |    Net            0.998    ||    Net            0.500    |    Net            0.498\n",
+      "\t              Big Network    0.998    |    Big Network    0.998    ||    Big Network    0.500    |    Big Network    0.498\n",
+      "\t              Approx 1       0.936    |    Approx 1       0.019    ||    Approx 1       1.000    |    Approx 1       0.000\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.501    |    CentralNet     0.501\n",
+      "\tF1 score      Net            1.000    |    Big Network    1.000    ||    Net            0.488    |    Big Network    0.488\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.501    |    Net            0.501\n",
-      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.501    |    CentralNet     0.501\n",
+      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.487    |    Net            0.488\n",
+      "\t              Big Network    1.000    |    Big Network    1.000    ||    Big Network    0.487    |    Big Network    0.488\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10662, 28, 28])\n",
-      "tensor(1180) torch.Size([1184, 1])\n",
-      "tensor(5330) torch.Size([10662, 1])\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.997    |    CentralNet     0.997    ||    Net            0.500    |    CentralNet     0.500\n",
+      "\tF1 score      Net            0.996    |    Big Network    0.996    ||    Net            0.506    |    Big Network    0.506\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            0.997    ||    Net            0.500    |    Net            0.500\n",
-      "\t              CentralNet     0.997    |    CentralNet     0.997    ||    CentralNet     0.500    |    CentralNet     0.500\n",
+      "\tCoverage      Net            0.998    |    Net            0.993    ||    Net            0.506    |    Net            0.506\n",
+      "\t              Big Network    0.998    |    Big Network    0.993    ||    Big Network    0.506    |    Big Network    0.506\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "torch.Size([10662, 28, 28])\n",
-      "tensor(1182) torch.Size([1184, 1])\n",
-      "tensor(5351) torch.Size([10662, 1])\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.998    |    CentralNet     0.998    ||    Net            0.502    |    CentralNet     0.502\n",
+      "\tF1 score      Net            0.992    |    Big Network    0.992    ||    Net            0.504    |    Big Network    0.504\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            1.000    ||    Net            0.502    |    Net            0.501\n",
-      "\t              CentralNet     0.997    |    CentralNet     1.000    ||    CentralNet     0.502    |    CentralNet     0.501\n",
+      "\tCoverage      Net            0.988    |    Net            0.997    ||    Net            0.502    |    Net            0.505\n",
+      "\t              Big Network    0.988    |    Big Network    0.997    ||    Big Network    0.502    |    Big Network    0.505\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n"
      ]
     }
@@ -329,7 +299,7 @@
     "batch_size = 64\n",
     "num_splits = 10\n",
     "\n",
-    "skf = model_selection.StratifiedKFold(n_splits=num_splits, shuffle=True, random_state=76)\n",
+    "skf = model_selection.StratifiedKFold(n_splits=num_splits, shuffle=True, random_state=8)\n",
     "convnet_split_res = cross_valid(x_data, y_data, model, criterion, optimizer, skf, batch_size=batch_size, max_epoch=10)\n",
     "\n",
     "nn_children = [name for name, _ in model.net.nets.named_children()]\n",
@@ -346,7 +316,6 @@
     "    covprompts = []\n",
     "    sep_model = f\"{'|':^9}\"\n",
     "    for k, pred, true in [[\"valid\", valid_pred, valid_true], [\"train\", train_pred, train_true]]:\n",
-    "        print(torch.count_nonzero(true == pred), pred.shape)\n",
     "        net_f1_score = metrics.f1_score(true, pred, average=\"binary\")\n",
     "        net_cov_score = cov_score(true, pred)\n",
     "        dict_metrics[('net', 'f1score', k)].append(net_f1_score)\n",
