--- a/derivate_layer.ipynb
+++ b/derivate_layer.ipynb
@@ -465,7 +465,7 @@
     "    prev_f1_avg = mean_metrics[('net', 'f1score', 'valid')]\n",
     "    cov_mean_prompts.append(f\"{'Net':<15}{mean_metrics[('net', 'coverage0', k)]:.3f}{sep_model}{'Net':<15}{mean_metrics[('net', 'coverage1', k)]:.3f}\")\n",
     "    for c, cname in enumerate(nn_children):\n",
-    "        modelname = 'CentralNet'if c==0 else f'Approx {c}'\n",
+    "        modelname = 'Big Network'if c==0 else f'Approx {c}'\n",
     "        model_f1_avg = mean_metrics[(cname, 'f1score', k)]\n",
     "        model_cov0_avg = mean_metrics[(cname, 'coverage0', k)]\n",
     "        model_cov1_avg = mean_metrics[(cname, 'coverage1', k)]\n",
