comment results freeze approx

--- a/freeze_approx.ipynb
+++ b/freeze_approx.ipynb
@@ -265,6 +265,15 @@
     "print(metrics.f1_score(y_train, pred_train), cov_score(y_train, pred_train))\n",
     "print(metrics.f1_score(y_valid, pred_valid), cov_score(y_valid, pred_valid))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comments\n",
+    "\n",
+    "very small increase in both metrics (sometimes even decrease in performances)"
+   ]
   }
  ],
  "metadata": {
