--- a/approx_conv.ipynb
+++ b/approx_conv.ipynb
@@ -137,13 +137,15 @@
     "        self.cnn = nn.Sequential(OrderedDict([\n",
     "            ('conv1', nn.Conv2d(1,1,3,1)),\n",
     "            ('a1', StepActivation()),\n",
+    "            ('mp1', nn.MaxPool2d(2)),\n",
     "            ('conv2', nn.Conv2d(1,1,3,1)),\n",
     "            ('a2', StepActivation()),\n",
+    "            ('mp2', nn.MaxPool2d(2)),\n",
     "            ('flatten', nn.Flatten()),\n",
     "        ]))\n",
     "\n",
     "        self.fc = nn.Sequential(OrderedDict([\n",
-    "            ('fc', nn.Linear(24*24,1)), # Too large for compiling\n",
+    "            ('fc', nn.Linear(5*5,1)), # Too large for compiling\n",
     "            ('afc', StepActivation()),\n",
     "        ]))\n",
     "\n",
@@ -198,7 +200,7 @@
     "\n",
     "        self.net = nn.Sequential(OrderedDict([\n",
     "            ('nets', Parallel(OrderedDict([\n",
-    "                ('cnn', BigConvNet()),\n",
+    "                # ('cnn', BigConvNet()),\n",
     "                ('apx1', ApproxConvNet()),\n",
     "            ]))),\n",
     "            ('or_', MaxLayer()),\n",
@@ -225,65 +227,45 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.998    |    Big Network    0.998    ||    Net            0.507    |    Big Network    0.507\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            1.000    ||    Net            0.507    |    Net            0.507\n",
-      "\t              Big Network    0.997    |    Big Network    1.000    ||    Big Network    0.507    |    Big Network    0.507\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.994    |    Big Network    0.994    ||    Net            0.493    |    Big Network    0.493\n",
+      "\tCoverage      Net            0.992    |    Net            0.997    ||    Net            0.493    |    Net            0.493\n",
+      "\t              Big Network    0.992    |    Big Network    0.997    ||    Big Network    0.493    |    Big Network    0.493\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.998    |    Big Network    0.998    ||    Net            0.511    |    Big Network    0.511\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            1.000    ||    Net            0.511    |    Net            0.511\n",
-      "\t              Big Network    0.997    |    Big Network    1.000    ||    Big Network    0.511    |    Big Network    0.511\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.992    |    Big Network    0.992    ||    Net            0.503    |    Big Network    0.503\n",
+      "\tCoverage      Net            0.985    |    Net            0.998    ||    Net            0.500    |    Net            0.504\n",
+      "\t              Big Network    0.985    |    Big Network    0.998    ||    Big Network    0.500    |    Big Network    0.504\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.994    |    Big Network    0.994    ||    Net            0.501    |    Big Network    0.501\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            0.988    ||    Net            0.506    |    Net            0.499\n",
-      "\t              Big Network    1.000    |    Big Network    0.988    ||    Big Network    0.506    |    Big Network    0.499\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.997    |    Big Network    0.997    ||    Net            0.503    |    Big Network    0.503\n",
+      "\tCoverage      Net            0.998    |    Net            0.995    ||    Net            0.503    |    Net            0.503\n",
+      "\t              Big Network    0.998    |    Big Network    0.995    ||    Big Network    0.503    |    Big Network    0.503\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.816    |    Big Network    0.995    ||    Net            0.500    |    Big Network    0.500\n",
-      "\t              Approx 1       0.573    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.555    |    Net            0.997    ||    Net            0.504    |    Net            0.498\n",
-      "\t              Big Network    0.998    |    Big Network    0.992    ||    Big Network    0.504    |    Big Network    0.498\n",
-      "\t              Approx 1       0.555    |    Approx 1       0.581    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.997    |    Big Network    0.997    ||    Net            0.495    |    Big Network    0.495\n",
+      "\tCoverage      Net            0.998    |    Net            0.997    ||    Net            0.494    |    Net            0.496\n",
+      "\t              Big Network    0.998    |    Big Network    0.997    ||    Big Network    0.494    |    Big Network    0.496\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            1.000    |    Big Network    1.000    ||    Net            0.504    |    Big Network    0.504\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.504    |    Net            0.504\n",
-      "\t              Big Network    1.000    |    Big Network    1.000    ||    Big Network    0.504    |    Big Network    0.504\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.993    |    Big Network    0.993    ||    Net            0.498    |    Big Network    0.498\n",
+      "\tCoverage      Net            0.998    |    Net            0.988    ||    Net            0.496    |    Net            0.498\n",
+      "\t              Big Network    0.998    |    Big Network    0.988    ||    Big Network    0.496    |    Big Network    0.498\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.987    |    Big Network    0.987    ||    Net            0.497    |    Big Network    0.497\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.981    |    Net            0.993    ||    Net            0.489    |    Net            0.500\n",
-      "\t              Big Network    0.981    |    Big Network    0.993    ||    Big Network    0.489    |    Big Network    0.500\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.992    |    Big Network    0.992    ||    Net            0.502    |    Big Network    0.502\n",
+      "\tCoverage      Net            0.988    |    Net            0.997    ||    Net            0.502    |    Net            0.502\n",
+      "\t              Big Network    0.988    |    Big Network    0.997    ||    Big Network    0.502    |    Big Network    0.502\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.967    |    Big Network    0.998    ||    Net            0.499    |    Big Network    0.499\n",
-      "\t              Approx 1       0.034    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.934    |    Net            0.998    ||    Net            0.500    |    Net            0.498\n",
-      "\t              Big Network    0.998    |    Big Network    0.998    ||    Big Network    0.500    |    Big Network    0.498\n",
-      "\t              Approx 1       0.936    |    Approx 1       0.019    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.994    |    Big Network    0.994    ||    Net            0.502    |    Big Network    0.502\n",
+      "\tCoverage      Net            0.992    |    Net            0.997    ||    Net            0.501    |    Net            0.502\n",
+      "\t              Big Network    0.992    |    Big Network    0.997    ||    Big Network    0.501    |    Big Network    0.502\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            1.000    |    Big Network    1.000    ||    Net            0.488    |    Big Network    0.488\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.487    |    Net            0.488\n",
-      "\t              Big Network    1.000    |    Big Network    1.000    ||    Big Network    0.487    |    Big Network    0.488\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.997    |    Big Network    0.997    ||    Net            0.503    |    Big Network    0.503\n",
+      "\tCoverage      Net            0.998    |    Net            0.995    ||    Net            0.502    |    Net            0.503\n",
+      "\t              Big Network    0.998    |    Big Network    0.995    ||    Big Network    0.502    |    Big Network    0.503\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.996    |    Big Network    0.996    ||    Net            0.506    |    Big Network    0.506\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.998    |    Net            0.993    ||    Net            0.506    |    Net            0.506\n",
-      "\t              Big Network    0.998    |    Big Network    0.993    ||    Big Network    0.506    |    Big Network    0.506\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "\tF1 score      Net            0.997    |    Big Network    0.997    ||    Net            0.495    |    Big Network    0.495\n",
+      "\tCoverage      Net            0.997    |    Net            0.997    ||    Net            0.493    |    Net            0.495\n",
+      "\t              Big Network    0.997    |    Big Network    0.997    ||    Big Network    0.493    |    Big Network    0.495\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.992    |    Big Network    0.992    ||    Net            0.504    |    Big Network    0.504\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.988    |    Net            0.997    ||    Net            0.502    |    Net            0.505\n",
-      "\t              Big Network    0.988    |    Big Network    0.997    ||    Big Network    0.502    |    Big Network    0.505\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n"
+      "\tF1 score      Net            0.996    |    Big Network    0.996    ||    Net            0.497    |    Big Network    0.497\n",
+      "\tCoverage      Net            0.992    |    Net            1.000    ||    Net            0.495    |    Net            0.498\n",
+      "\t              Big Network    0.992    |    Big Network    1.000    ||    Big Network    0.495    |    Big Network    0.498\n"
      ]
     }
    ],
