learn iteratively added approx

--- a/freeze_approx.ipynb
+++ b/freeze_approx.ipynb
@@ -186,6 +186,19 @@
     "        ]))\n",
     "\n",
     "    def forward(self, input):\n",
+    "        return self.net(input)\n",
+    "    \n",
+    "class BlankNet(nn.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.net = nn.Sequential(OrderedDict([\n",
+    "            ('nets', Parallel(OrderedDict([\n",
+    "            ]))),\n",
+    "            ('or_', MaxLayer()),\n",
+    "        ]))\n",
+    "\n",
+    "    def forward(self, input):\n",
     "        return self.net(input)"
    ]
   },
@@ -200,13 +213,41 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model(x_train, y_train, x_valid, y_valid, model, criterion, optimizer):\n",
+    "    train_model(x_train, y_train, model, criterion, optimizer, 500)\n",
+    "    model.eval()\n",
+    "    pred_train = model(x_train).detach()\n",
+    "    pred_valid = model(x_valid).detach()\n",
+    "\n",
+    "    f1_train = metrics.f1_score(y_train, pred_train)\n",
+    "    cov_train = cov_score(y_train, pred_train)\n",
+    "    f1_valid = metrics.f1_score(y_valid, pred_valid)\n",
+    "    cov_valid = cov_score(y_valid, pred_valid)\n",
+    "\n",
+    "    print(\n",
+    "        f\"{'':<15}{'Train':^15}{'Valid':^15}\",\n",
+    "        f\"{'F1 score':<15}{f1_train:^15.3f}{f1_valid:^15.3f}\",\n",
+    "        f\"{'Coverage [0]':<15}{cov_train[0]:^15.3f}{cov_valid[0]:^15.3f}\",\n",
+    "        f\"{'         [1]':<15}{cov_train[1]:^15.3f}{cov_valid[1]:^15.3f}\",\n",
+    "        sep=\"\\n\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.851063829787234 {0.0: 0.768595041322314, 1.0: 0.9128630705394191}\n",
-      "0.8387096774193549 {0.0: 0.6538461538461539, 1.0: 0.9629629629629629}\n"
+      "                    Train          Valid     \n",
+      "F1 score            0.852          0.702     \n",
+      "Coverage [0]        0.797          0.593     \n",
+      "         [1]        0.893          0.769     \n"
      ]
     }
    ],
@@ -221,25 +262,7 @@
     "x_train, y_train = x_data[train_index], y_data[train_index]\n",
     "x_valid, y_valid = x_data[valid_index], y_data[valid_index]\n",
     "\n",
-    "train_model(x_train, y_train, model, criterion, optimizer, 500)\n",
-    "model.eval()\n",
-    "pred_train = model(x_train).detach()\n",
-    "pred_valid = model(x_valid).detach()\n",
-    "\n",
-    "print(metrics.f1_score(y_train, pred_train), cov_score(y_train, pred_train))\n",
-    "print(metrics.f1_score(y_valid, pred_valid), cov_score(y_valid, pred_valid))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for param in model.parameters():\n",
-    "    param.requires_grad = False\n",
-    "\n",
-    "model.net.nets.add_module(\"nn\", BigNet())"
+    "eval_model(x_train, y_train, x_valid, y_valid, model, criterion, optimizer)"
    ]
   },
   {
@@ -251,19 +274,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8527131782945737 {0.0: 0.7727272727272727, 1.0: 0.9128630705394191}\n",
-      "0.8387096774193549 {0.0: 0.6538461538461539, 1.0: 0.9629629629629629}\n"
+      "                    Train          Valid     \n",
+      "F1 score            0.852          0.702     \n",
+      "Coverage [0]        0.797          0.593     \n",
+      "         [1]        0.893          0.769     \n"
      ]
     }
    ],
    "source": [
-    "train_model(x_train, y_train, model, criterion, optimizer, 500)\n",
-    "model.eval()\n",
-    "pred_train = model(x_train).detach()\n",
-    "pred_valid = model(x_valid).detach()\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
     "\n",
-    "print(metrics.f1_score(y_train, pred_train), cov_score(y_train, pred_train))\n",
-    "print(metrics.f1_score(y_valid, pred_valid), cov_score(y_valid, pred_valid))"
+    "model.net.nets.add_module(\"nn\", BigNet())\n",
+    "optimizer = Adam(model.net.nets.nn.parameters(), lr=1e-2, weight_decay=1e-6)\n",
+    "\n",
+    "eval_model(x_train, y_train, x_valid, y_valid, model, criterion, optimizer)"
    ]
   },
   {
@@ -272,7 +297,50 @@
    "source": [
     "### Comments\n",
     "\n",
-    "very small increase in both metrics (sometimes even decrease in performances)"
+    "very small increase in both metrics (sometimes even decreases in performances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Train          Valid     \n",
+      "F1 score            0.860          0.678     \n",
+      "Coverage [0]        0.805          0.519     \n",
+      "         [1]        0.901          0.769     \n",
+      "                    Train          Valid     \n",
+      "F1 score            0.854          0.700     \n",
+      "Coverage [0]        0.730          0.519     \n",
+      "         [1]        0.946          0.808     \n",
+      "                    Train          Valid     \n",
+      "F1 score            0.859          0.721     \n",
+      "Coverage [0]        0.726          0.519     \n",
+      "         [1]        0.959          0.846     \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = BlankNet()\n",
+    "criterion = nn.BCELoss()\n",
+    "model.net.nets.add_module(\"apx1\", ApproxNet())\n",
+    "optimizer = Adam(model.parameters(), lr=1e-2, weight_decay=1e-6)\n",
+    "\n",
+    "eval_model(x_train, y_train, x_valid, y_valid, model, criterion, optimizer)\n",
+    "\n",
+    "model.net.nets.add_module(\"apx2\", ApproxNet())\n",
+    "optimizer = Adam(model.net.nets.apx2.parameters(), lr=1e-2, weight_decay=1e-6)\n",
+    "\n",
+    "eval_model(x_train, y_train, x_valid, y_valid, model, criterion, optimizer)\n",
+    "\n",
+    "model.net.nets.add_module(\"apx3\", ApproxNet())\n",
+    "optimizer = Adam(model.net.nets.apx3.parameters(), lr=1e-2, weight_decay=1e-6)\n",
+    "\n",
+    "eval_model(x_train, y_train, x_valid, y_valid, model, criterion, optimizer)"
    ]
   }
  ],
