exp new location + new exp

--- a/compiling_nn/odd_pyeda.ipynb
+++ b/compiling_nn/odd_pyeda.ipynb
@@ -85,7 +85,7 @@
     "    return nn.Sequential(*a)\n",
     "\n",
     "# TODO test limit case\n",
-    "TEST = True\n",
+    "TEST = False\n",
     "\n",
     "def test_odd_build(n_weights):\n",
     "    neuron = nn.Linear(n_weights,1)\n",
